--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@
   padding: 0;
   box-sizing: border-box;
 }
+body {
+  display: grid;
+  min-height: 100vh;
+  place-items: center;
+}
 h4,
 h5,
 p,
@@ -24,8 +29,6 @@ a {
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, minmax(200px, auto));
   max-width: 960px;
-  padding: 120px;
-  margin: 0 auto;
 }
 /* End of global styling */
 
